added partner config page

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -26,6 +26,7 @@ Logged in as <span id="loginEmail"></span>
     <li class="ro-sem" style="display: none"><a href="/adm/salt.html">Salts Management</a></li>
     <li class="ro-opm ro-adm" style="display: none"><a href="/adm/operator-key.html">Operator Key Management</a></li>
     <li class="ro-opm ro-adm" style="display: none"><a href="/adm/enclave-id.html">Enclave ID Management</a></li>
+    <li class="ro-adm" style="display: none"><a href="/adm/partner-config.html">OptOut Partner Management</a></li>
     <li class="ro-adm" style="display: none"><a href="/adm/administrators.html">Administrator Management</a></li>
     <li class="ro-nil" style="display: none">No Admin Permissions</li>
 </ul>
