--- a/webroot/adm/operator-key.html
+++ b/webroot/adm/operator-key.html
@@ -17,8 +17,8 @@
 <input type="text" id="operatorName" name="operatorName">
 <label for="protocol">Protocol:</label>
 <input type="text" id="protocol" name="protocol">
-<label for="siteId">Site ID:</label>
-<input type="number" id="siteId" name="siteId">
+<label for="siteId">Site Id:</label>
+<input type="text" id="siteId" name="siteId">
 
 <br>
 <br>
@@ -32,6 +32,7 @@
     <li class="ro-opm" style="display: none"><a href="#" id="doAdd">Add Operator Key</a></li>
     <li class="ro-opm" style="display: none"><a href="#" id="doDisable">Disable Operator Key</a></li>
     <li class="ro-opm" style="display: none"><a href="#" id="doEnable">Enable Operator Key</a></li>
+    <li class="ro-cki" style="display: none"><a href="#" id="doSetSite">Update Site</a></li>
     <li class="ro-adm" style="display: none"><a href="#" id="doRekey">Rekey</a></li>
     <li class="ro-adm" style="display: none"><a href="#" id="doDel">Delete Operator Key</a></li>
 </ul>
@@ -95,6 +96,14 @@
         $('#doEnable').on('click', function () {
             var operatorName = encodeURIComponent($('#operatorName').val());
             var url = '/api/operator/enable?name=' + operatorName;
+
+            doApiCall('POST', url, '#standardOutput', '#errorOutput');
+        });
+
+        $('#doSetSite').on('click', function () {
+            var operatorName = encodeURIComponent($('#operatorName').val());
+            var siteId = encodeURIComponent($('#siteId').val());
+            var url = '/api/operator/update?name=' + operatorName + '&site_id=' + siteId;
 
             doApiCall('POST', url, '#standardOutput', '#errorOutput');
         });
