--- a/webroot/adm/operator-key.html
+++ b/webroot/adm/operator-key.html
@@ -19,6 +19,8 @@
 <input type="text" id="protocol" name="protocol">
 <label for="siteId">Site Id:</label>
 <input type="text" id="siteId" name="siteId">
+<label for="isPublicOperator">Public Operator:</label>
+<input type="checkbox" id="isPublicOperator" name="isPublicOperator">
 
 <br>
 <br>
@@ -33,6 +35,7 @@
     <li class="ro-opm" style="display: none"><a href="#" id="doDisable">Disable Operator Key</a></li>
     <li class="ro-opm" style="display: none"><a href="#" id="doEnable">Enable Operator Key</a></li>
     <li class="ro-cki" style="display: none"><a href="#" id="doSetSite">Update Site</a></li>
+    <li class="ro-cki" style="display: none"><a href="#" id="doSetOperatorType">Update Public/Private Operator Type</a></li>
     <li class="ro-adm" style="display: none"><a href="#" id="doRekey">Rekey</a></li>
     <li class="ro-adm" style="display: none"><a href="#" id="doDel">Delete Operator Key</a></li>
 </ul>
@@ -67,7 +70,8 @@
             var operatorName = encodeURIComponent($('#operatorName').val());
             var protocol = encodeURIComponent($('#protocol').val());
             var siteId = encodeURIComponent($('#siteId').val());
-            var url = '/api/operator/add?name=' + operatorName + '&protocol=' + protocol + '&site_id=' + siteId;
+            var isPublicOperator = encodeURIComponent($('#isPublicOperator').val());
+            var url = '/api/operator/add?name=' + operatorName + '&protocol=' + protocol + '&site_id=' + siteId + '&isPublicOperator=' + isPublicOperator;
 
             doApiCall('POST', url, '#standardOutput', '#errorOutput');
         });
@@ -104,6 +108,14 @@
             var operatorName = encodeURIComponent($('#operatorName').val());
             var siteId = encodeURIComponent($('#siteId').val());
             var url = '/api/operator/update?name=' + operatorName + '&site_id=' + siteId;
+
+            doApiCall('POST', url, '#standardOutput', '#errorOutput');
+        });
+
+        $('#doSetOperatorType').on('click', function () {
+            var operatorName = encodeURIComponent($('#operatorName').val());
+            var isPublicOperator = (document.getElementById('isPublicOperator').checked == true)? "true" : "false";
+            var url = '/api/operator/updatePublicPrivateOperator?name=' + operatorName + '&isPublicOperator=' + isPublicOperator;
 
             doApiCall('POST', url, '#standardOutput', '#errorOutput');
         });
