--- a/webroot/adm/operator-key.html
+++ b/webroot/adm/operator-key.html
@@ -17,6 +17,8 @@
 <input type="text" id="operatorName" name="operatorName">
 <label for="protocol">Protocol:</label>
 <input type="text" id="protocol" name="protocol">
+<label for="roles">Roles:</label>
+<input type="text" id="roles" name="roles">
 
 <br>
 <br>
@@ -31,6 +33,7 @@
     <li class="ro-opm" style="display: none"><a href="#" id="doDisable">Disable Operator Key</a></li>
     <li class="ro-opm" style="display: none"><a href="#" id="doEnable">Enable Operator Key</a></li>
     <li class="ro-adm" style="display: none"><a href="#" id="doRekey">Rekey</a></li>
+    <li class="ro-opm" style="display: none"><a href="#" id="doSetRoles">Set Roles</a></li>
     <li class="ro-adm" style="display: none"><a href="#" id="doDel">Delete Operator Key</a></li>
 </ul>
 
@@ -63,7 +66,8 @@
         $('#doAdd').on('click', function () {
             var operatorName = encodeURIComponent($('#operatorName').val());
             var protocol = encodeURIComponent($('#protocol').val());
-            var url = '/api/operator/add?name=' + operatorName + '&protocol=' + protocol;
+            var roles = encodeURIComponent($('#roles').val());
+            var url = '/api/operator/add?name=' + operatorName + '&protocol=' + protocol + '&roles=' + roles;
 
             doApiCall('POST', url, '#standardOutput', '#errorOutput');
         });
@@ -92,6 +96,14 @@
         $('#doEnable').on('click', function () {
             var operatorName = encodeURIComponent($('#operatorName').val());
             var url = '/api/operator/enable?name=' + operatorName;
+
+            doApiCall('POST', url, '#standardOutput', '#errorOutput');
+        });
+
+        $('#doSetRoles').on('click', function () {
+            var operatorName = encodeURIComponent($('#operatorName').val());
+            var roles = encodeURIComponent($('#roles').val());
+            var url = '/api/operator/roles?name=' + operatorName + '&roles=' + roles;
 
             doApiCall('POST', url, '#standardOutput', '#errorOutput');
         });
