Update documentation on finding latest image

--- a/webroot/adm/enclave-gcp.html
+++ b/webroot/adm/enclave-gcp.html
@@ -13,7 +13,7 @@
 
 <h3>Inputs</h3>
 
-<label for="diskUri">GCP Disk URI. To get the latest: gcloud compute images list --filter="name~'cos'" --standard-images --uri</label>
+<label for="diskUri">GCP Disk URI. To get the latest: gcloud compute images list --filter="name~'cos-stable'" --standard-images --uri</label>
 <br>
 <input type="text" id="diskUri" name="diskUri" size="100" value="">
 <br>
