--- a/webroot/adm/administrators.html
+++ b/webroot/adm/administrators.html
@@ -33,6 +33,12 @@
     <li class="ro-adm" style="display: none"><a href="#" id="doSetRoles">Set Roles</a></li>
     <li class="ro-adm" style="display: none"><a href="#" id="doRekey">Rekey</a></li>
     <li class="ro-adm" style="display: none"><a href="#" id="doDel">Delete Admin User</a></li>
+    <br/><br/>
+        <li class="ro-adm" style="display: none"><a href="#" id="doRewriteMetadata">Overwrite</a> global metadata files of Client Keys/Encryption Keys/Encryption Key ACLs (no underlying data change). </li>
+        <ul>
+            <li> Useful for rolling back private operators to use (and force re-read of) global data and disabling "provide_private_site_data" config in core service.</li>
+        </ul>
+
 </ul>
 
 <br>
@@ -73,6 +79,15 @@
             var email = encodeURIComponent($('#email').val());
             var url = '/api/admin/del?name=' + email;
 
+            doApiCall('POST', url, '#standardOutput', '#errorOutput');
+        });
+
+        $('#doRewriteMetadata').on('click', function () {
+            var url = '/api/admin/rewrite-meta';
+            var result = confirm("Are you sure you want to overwrite the global metadata?");
+            if (result != true) {
+                return;
+            }
             doApiCall('POST', url, '#standardOutput', '#errorOutput');
         });
 
