--- a/webroot/adm/encryption-key.html
+++ b/webroot/adm/encryption-key.html
@@ -17,6 +17,8 @@
 <input type="text" id="siteId" name="siteId">
 <label for="minAge">Min age (seconds):</label>
 <input type="text" id="minAge" name="minAge">
+<label for="activatesIn">Activates in (seconds):</label>
+<input type="text" id="activatesIn" name="activatesIn">
 <label for="force">Force:</label>
 <input type="checkbox" id="force" name="force" value="true">
 
@@ -58,7 +60,8 @@
 
         $('#doAddSiteKey').on('click', function () {
             var siteId = encodeURIComponent($('#siteId').val());
-            var url = '/api/key/add?site_id=' + siteId;
+            var activatesIn = encodeURIComponent($('#activatesIn').val());
+            var url = '/api/key/add?site_id=' + siteId + '&activates_in_seconds=' + activatesIn;
 
             doApiCall('POST', url, '#standardOutput', '#errorOutput');
         });
