--- a/webroot/adm/enclave-id.html
+++ b/webroot/adm/enclave-id.html
@@ -33,7 +33,7 @@
     <li class="ro-opm" style="display: none"><a href="#" id="doDisable">Disable Enclave ID</a></li>
     <li class="ro-opm" style="display: none"><a href="#" id="doEnable">Enable Enclave ID</a></li>
     -->
-    <li class="ro-adm" style="display: none"><a href="#" id="doDel">Delete Enclave ID<</a></li>
+    <li class="ro-adm" style="display: none"><a href="#" id="doDel">Delete Enclave ID</a></li>
 </ul>
 
 <br>
