Fixed role validation

--- a/webroot/adm/partner-config.html
+++ b/webroot/adm/partner-config.html
@@ -53,9 +53,18 @@
                 $(outputText).val(pretty);
             },
             error: function (err) {
-                $(errorDiv).html('Error: ' + err.status + ': ' + err.statusText);
+                $(errorDiv).html('Error: ' + err.status + ': ' + (isJsonString(err.responseText) ? JSON.parse(err.responseText).message : (err.responseText ? err.responseText : err.statusText)));
             }
         });
+    }
+
+    function isJsonString(str) {
+        try {
+            JSON.parse(str);
+        } catch (e) {
+            return false;
+        }
+        return true;
     }
 
     function updateConfig(jsonStr, outputDiv, errorDiv) {
@@ -78,7 +87,7 @@
                 $(outputDiv).html(pretty);
             },
             error: function (err) {
-                $(errorDiv).html('Error: ' + err.status + ': ' + err.statusText);
+                $(errorDiv).html('Error: ' + err.status + ': ' + JSON.parse(err).message);
             }
         });
     }
