--- a/webroot/index.html
+++ b/webroot/index.html
@@ -29,6 +29,7 @@ Logged in as <span id="loginEmail"></span>
     <li class="ro-opm ro-adm" style="display: none"><a href="/adm/enclave-gcp.html">GCP Enclave ID Tool</a></li>
     <li class="ro-adm" style="display: none"><a href="/adm/partner-config.html">OptOut Partner Management</a></li>
     <li class="ro-adm" style="display: none"><a href="/adm/administrators.html">Administrator Management</a></li>
+    <li class="ro-adm" style="display: none"><a href="/adm/search.html">Key and Secret Search</a></li>
     <li class="ro-nil" style="display: none">No Admin Permissions</li>
 </ul>
 
