--- a/webroot/adm/administrators.html
+++ b/webroot/adm/administrators.html
@@ -31,13 +31,20 @@
     <li class="ro-adm" style="display: none"><a href="#" id="doDisable">Disable Admin User</a></li>
     <li class="ro-adm" style="display: none"><a href="#" id="doEnable">Enable Admin User</a></li>
     <li class="ro-adm" style="display: none"><a href="#" id="doSetRoles">Set Roles</a></li>
-    <li class="ro-adm" style="display: none"><a href="#" id="doDel">Delete Admin User</a></li>
-    <br/><br/>
-        <li class="ro-adm" style="display: none"><a href="#" id="doRewriteMetadata">Rewrite</a> global metadata files of Client Keys/Encryption Keys/Encryption Key ACLs (no underlying data change). </li>
+    <li class="ro-adm" style="display: none"><br/><br/><a href="#" id="doRewriteMetadata">Rewrite</a> global metadata files of Client Keys/Encryption Keys/Encryption Key ACLs (no underlying data change). </li>
+    <li>
         <ul>
             <li> Useful for rolling back private operators to use (and force re-read of) global data and disabling "provide_private_site_data" config in core service.</li>
         </ul>
+    </li>
+</ul>
 
+<br>
+
+<h3>Low Level Operations - Do Not Use Unless Necessary</h3>
+
+<ul>
+    <li class="ro-adm" style="display: none"><a href="#" id="doDel">Delete Admin User</a></li>
 </ul>
 
 <br>
@@ -75,6 +82,10 @@
         });
 
         $('#doDel').on('click', function () {
+            if (!confirm("Are you sure?")) {
+                return;
+            }
+
             var email = encodeURIComponent($('#email').val());
             var url = '/api/admin/del?name=' + email;
 
