--- a/webroot/adm/enclave-id.html
+++ b/webroot/adm/enclave-id.html
@@ -33,6 +33,13 @@
     <li class="ro-opm" style="display: none"><a href="#" id="doDisable">Disable Enclave ID</a></li>
     <li class="ro-opm" style="display: none"><a href="#" id="doEnable">Enable Enclave ID</a></li>
     -->
+</ul>
+
+<br>
+
+<h3>Low Level Operations - Do Not Use Unless Necessary</h3>
+
+<ul>
     <li class="ro-adm" style="display: none"><a href="#" id="doDel">Delete Enclave ID</a></li>
 </ul>
 
@@ -65,6 +72,10 @@
         });
 
         $('#doDel').on('click', function () {
+            if (!confirm("Are you sure?")) {
+                return;
+            }
+
             var enclaveName = encodeURIComponent($('#enclaveName').val());
             var url = '/api/enclave/del?name=' + enclaveName;
 
