add key rotation

--- a/webroot/adm/keysets.html
+++ b/webroot/adm/keysets.html
@@ -4,7 +4,7 @@
   <script src="/js/main.js"></script>
 </head>
 <body>
-<h1>UID2 Admin - Keyset Access Management</h1>
+<h1>UID2 Admin - Keyset Access Management (Administrator)</h1>
 
 <a href="/">Back</a>
 
@@ -28,11 +28,11 @@
 <h3>Operations</h3>
 
 <ul>
-  <li class="ro-cki" style="display: none"><a href="#" id="doListAll">List All</a></li>
-  <li class="ro-cki" style="display: none"><a href="#" id="doList">List</a></li>
-  <li class="ro-cki" style="display: none"><a href="#" id="doReset">Reset</a></li>
-  <li class="ro-cki" style="display: none"><a href="#" id="doUpdate">Update</a></li>
-  <li class="ro-cki" style="display: none"><a href="#" id="doMakeNew">Make New Keyset</a></li>
+  <li class="ro-adm" style="display: none"><a href="#" id="doListAll">List All</a></li>
+  <li class="ro-adm" style="display: none"><a href="#" id="doList">List</a></li>
+  <li class="ro-adm" style="display: none"><a href="#" id="doReset">Reset</a></li>
+  <li class="ro-adm" style="display: none"><a href="#" id="doUpdate">Update</a></li>
+  <li class="ro-adm" style="display: none"><a href="#" id="doMakeNew">Make New Keyset</a></li>
 </ul>
 
 <br>
