--- a/webroot/adm/default-keysets.html
+++ b/webroot/adm/default-keysets.html
@@ -4,7 +4,7 @@
   <script src="/js/main.js"></script>
 </head>
 <body>
-<h1>UID2 Admin - Default Keyset Access Management</h1>
+<h1>UID2 Admin - Default Keyset Access Management (Sharer)</h1>
 
 <a href="/">Back</a>
 
@@ -26,10 +26,10 @@
 <h3>Operations</h3>
 
 <ul>
-  <li class="ro-cki" style="display: none"><a href="#" id="doListAll">List All</a></li>
-  <li class="ro-cki" style="display: none"><a href="#" id="doList">List</a></li>
-  <li class="ro-cki" style="display: none"><a href="#" id="doReset">Reset</a></li>
-  <li class="ro-cki" style="display: none"><a href="#" id="doUpdate">Update</a></li>
+  <li class="ro-shr" style="display: none"><a href="#" id="doListAll">List All</a></li>
+  <li class="ro-shr" style="display: none"><a href="#" id="doList">List</a></li>
+  <li class="ro-shr" style="display: none"><a href="#" id="doReset">Reset</a></li>
+  <li class="ro-shr" style="display: none"><a href="#" id="doUpdate">Update</a></li>
 </ul>
 
 <br>
