--- a/webroot/adm/keysets.html
+++ b/webroot/adm/keysets.html
@@ -17,6 +17,8 @@
 <input type="text" id="siteId" name="siteId">
 <label for="keysetId">Keyset Id:</label>
 <input type="text" id="keysetId" name="keysetId">
+<label for="keysetName">Set Keyset Name:</label>
+<input type="text" id="keysetName" name="keysetName">
 <label for="addSiteIds">Add Site Ids:</label>
 <input type="text" id="addSiteIds" name="addSiteIds">
 <label for="removeSiteIds">Remove Site Ids:</label>
@@ -28,10 +30,11 @@
 <h3>Operations</h3>
 
 <ul>
-  <li class="ro-adm" style="display: none"><a href="#" id="doListAll">List All</a></li>
-  <li class="ro-adm" style="display: none"><a href="#" id="doList">List</a></li>
-  <li class="ro-adm" style="display: none"><a href="#" id="doReset">Reset</a></li>
-  <li class="ro-adm" style="display: none"><a href="#" id="doUpdate">Update</a></li>
+  <li class="ro-adm" style="display: none"><a href="#" id="doListAll">List All Keysets</a></li>
+  <li class="ro-adm" style="display: none"><a href="#" id="doListAllBySite">List All Keysets By Site Id</a></li>
+  <li class="ro-adm" style="display: none"><a href="#" id="doListKeyset">List Keyset</a></li>
+  <li class="ro-adm" style="display: none"><a href="#" id="doReset">Reset Keyset</a></li>
+  <li class="ro-adm" style="display: none"><a href="#" id="doUpdate">Update Keyset</a></li>
   <li class="ro-adm" style="display: none"><a href="#" id="doMakeNew">Make New Keyset</a></li>
 </ul>
 
@@ -50,7 +53,26 @@
       doApiCall('GET', '/api/sharing/keysets', '#standardOutput', '#errorOutput');
     });
 
-    $('#doList').on('click', function () {
+    $('#doListAllBySite').on('click', function () {
+
+      const siteId = parseInt($('#siteId').val());
+      const url = '/api/sharing/keysets';
+
+      doApiCallWithCallback('GET', url, (text) => {
+        const ja = JSON.parse(text);
+
+        const filtered = ja.filter(function(keyset) {
+          return keyset.site_id === siteId
+        });
+        const pretty = JSON.stringify(filtered,null,2);
+        $('#standardOutput').html(pretty);
+
+      }, (err) => {
+        $('#errorOutput').html('Error: ' + err.status + ': ' + err.statusText);
+      });
+    });
+
+    $('#doListKeyset').on('click', function () {
       var keysetId = encodeURIComponent($('#keysetId').val());
       doApiCall('GET', '/api/sharing/keyset/' + keysetId, '#standardOutput', '#errorOutput');
     });
@@ -69,6 +91,7 @@
     $('#doUpdate').on('click', function () {
       const siteId = parseInt($('#siteId').val());
       const keysetId = parseInt($('#keysetId').val());
+      let name = $('#keysetName').val();
       const url = '/api/sharing/keyset/' + keysetId.toString();
 
       const add = ($('#addSiteIds').val()).replace(/\s+/g, '').split(',').filter( (value, _, __) => value !== "").map(Number);
@@ -83,8 +106,14 @@
 
         const url = '/api/sharing/keyset';
 
+        let payload;
+        if(name && (name = $.trim(name))) {
+          payload = JSON.stringify({allowlist: allowlist, keyset_id: keysetId, site_id: siteId, name: name})
+        } else {
+          payload = JSON.stringify({allowlist: allowlist, keyset_id: keysetId, site_id: siteId})
+        }
 
-        doApiCall('POST', url, '#standardOutput', 'errorOutput', JSON.stringify({allowlist: allowlist, keyset_id: keysetId, site_id: siteId}))
+        doApiCall('POST', url, '#standardOutput', 'errorOutput', payload)
       }, (err) => {
         $('#errorOutput').html('Error: ' + err.status + ': ' + err.statusText);
       });
@@ -92,8 +121,17 @@
     });
     $('#doMakeNew').on('click', function () {
       const siteId = parseInt($('#siteId').val());
+      let name = $('#keysetName').val();
       const url = '/api/sharing/keyset';
-      doApiCall('POST', url, '#standardOutput', 'errorOutput', JSON.stringify({allowlist: [] ,site_id: siteId}));
+
+      let payload;
+      if(name && (name = $.trim(name))) {
+        payload = JSON.stringify({allowlist: [], site_id: siteId, name: name})
+      } else {
+        payload = JSON.stringify({allowlist: [], site_id: siteId})
+      }
+
+      doApiCall('POST', url, '#standardOutput', 'errorOutput', payload);
     });
   });
 
