--- a/webroot/adm/encryption-key.html
+++ b/webroot/adm/encryption-key.html
@@ -59,6 +59,10 @@
         $('#doListKeysBySite').on('click', function () {
 
             const siteId = parseInt($('#siteId').val());
+            if(!siteId) {
+                $('#errorOutput').html("Required Parameters: site_id");
+                return;
+            }
             const url = '/api/key/list';
 
             doApiCallWithCallback('GET', url, (text) => {
@@ -82,6 +86,10 @@
         $('#doListKeysetKeysByKeysetId').on('click', function () {
 
             const keysetId = parseInt($('#keysetId').val());
+            if(!keysetId) {
+                $('#errorOutput').html("Required Parameters: keyset_id");
+                return;
+            }
             const url = '/api/key/list_keyset_keys';
 
             doApiCallWithCallback('GET', url, (text) => {
