change naming/ order of input fields

--- a/webroot/adm/keysets.html
+++ b/webroot/adm/keysets.html
@@ -13,15 +13,15 @@
 
 <h3>Inputs</h3>
 
-<label for="siteId">Site Id:</label>
-<input type="text" id="siteId" name="siteId">
 <label for="keysetId">Keyset Id:</label>
 <input type="text" id="keysetId" name="keysetId">
+<label for="siteId">Site Id:</label>
+<input type="text" id="siteId" name="siteId">
 <label for="keysetName">Set Keyset Name:</label>
 <input type="text" id="keysetName" name="keysetName">
-<label for="addSiteIds">Add Site Ids:</label>
+<label for="addSiteIds">Add Allowed Sites:</label>
 <input type="text" id="addSiteIds" name="addSiteIds">
-<label for="removeSiteIds">Remove Site Ids:</label>
+<label for="removeSiteIds">Remove Allowed Sites:</label>
 <input type="text" id="removeSiteIds" name="removeSiteIds">
 
 <br>
